# lidar_curb_detection

./: CMakeLists.txt  README.md  package.xml
cmake/: PCL.cmake  boost.cmake  eigen.cmake  limbo.cmake  opencv.cmake  openmp.cmake
config/: params.yaml
include/lidar_curb_detection/: boundary_points copy 2.hpp  boundary_points copy.hpp  boundary_points.hpp  cloud_mapper.hpp  curb_utils.hpp  feature_points.hpp  gaussian_process.hpp  grid_map.hpp  ground_segment.hpp  lidar_curb_dec.hpp  road_segmentation.hpp
launch/: lidar_curb_detection.launch  test.rviz
src/: curb_detection_node.cpp
src/lib/: boundary_points.cpp  cloud_mapper.cpp  feature_points.cpp  gaussian_process.cpp  grid_map.cpp  ground_segment.cpp  lidar_curb_dec.cpp  road_segmentation.cpp
